Fixed menu bar content. Aligned text in carousel and added icons for navigation.

--- a/style/main.css
+++ b/style/main.css
@@ -241,6 +241,13 @@ li .right-menu .dropdown {
   overflow: hidden;
   height: 250px;
   position: relative;
+  text-align: center;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:50px;
+  letter-spacing:0px;
+  line-height:36px;
+  text-shadow: 2px 2px 8px #000;
 }
 
 .slider ul {
@@ -303,23 +310,13 @@ li .right-menu .dropdown {
 }
 
 .slider .content {
-  z-index: 3;
   position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 3em;
-  box-sizing: border-box;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  line-height: 3em;
-  padding: 0 1em;
-  font-size: 1.5em;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.slider .content a {
-  color: inherit;
-}
+
 
 
 input[type=text], select, textarea {
@@ -660,6 +657,7 @@ nav {
   transform:rotate(45deg)
 }
 
+
 .button.menu-opened:before {
   top:33px;
   background:#fff;
@@ -669,7 +667,9 @@ nav {
   -ms-transform:rotate(-45deg);
   -o-transform:rotate(-45deg);
   transform:rotate(-45deg)
+
 }
+
 
 #cssmenu .submenu-button {
   position:absolute;
@@ -730,6 +730,164 @@ nav {
 {
   display: none;
 }
+
+.logo {
+  position:relative;
+  left: 10px;
+  top: 15px;
+  width:100%;
+  height:75px;
+  text-align: left;
+  float:none;
+}
+
+.flexnav{
+    -webkit-padding-start: 0px;
+    -webkit-margin-before: 0px;
+    -webkit-margin-after: 0px;
+    margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;
+    width:100%;
+    height: auto;
+    position: relative;
+    z-index: 1; 
+}
+
+nav {
+  width:100%;
+  height: auto;
+}
+
+#cssmenu {
+  width:100%;
+}
+
+#cssmenu a {
+  font-size: 35px;
+}
+
+#cssmenu ul {
+  width:100%;
+  margin-right: 0;
+  height: auto;
+}
+
+#cssmenu ul li {
+  width:100%;
+  background-color: #333;
+  text-align: center;
+  color: #fff;
+}
+
+#cssmenu ul li:hover {
+  background:#333;
+}
+
+#cssmenu ul ul li,
+#cssmenu li:hover > ul > li {
+  height: auto;
+}
+
+#cssmenu ul ul li a {
+  text-align: center;
+}
+
+#cssmenu ul ul li:hover > a,
+#cssmenu ul ul li.active > a {
+  color:#008ab3;
+  background-color: #333;
+}
+
+#cssmenu ul ul {
+  position:relative;
+  left:0;
+  width:100%;
+  margin:0;
+}
+
+#cssmenu #head-mobile {
+  display:block;
+  padding:23px;
+  color:black;
+  font-size:12px;
+  font-weight:700
+}
+
+.button {
+  width:33px;
+  height:25px;
+  position:absolute;
+  right:26px;
+  top:25px;
+  cursor:pointer;
+}
+
+.button:after {
+  position:absolute;
+  top:23px;
+  right:26px;
+  display:block;
+  height:8px;
+  width:40px;
+  border-top:5px solid #fff;
+  border-bottom:5px solid #fff;
+  content:'';
+}
+
+.button:before {
+  -webkit-transition:all .3s ease;
+  -ms-transition:all .3s ease;
+  transition:all .3s ease;
+  position:absolute;
+  top:10px;
+  right:26px;
+  display:block;
+  height:5px;
+  width:40px;
+  background:#fff;
+  content:'';
+}
+
+.button.menu-opened:after {
+  -webkit-transition:all .3s ease;
+  -ms-transition:all .3s ease;
+  transition:all .3s ease;
+  top:33px;
+  border:0;
+  height:5px;
+  width:40px;
+  background:#fff;
+  -webkit-transform:rotate(45deg);
+  -moz-transform:rotate(45deg);
+  -ms-transform:rotate(45deg);
+  -o-transform:rotate(45deg);
+  transform:rotate(45deg)
+}
+
+.button.menu-opened:before {
+  top:33px;
+  background:#fff;
+  width:40px;
+  -webkit-transform:rotate(-45deg);
+  -moz-transform:rotate(-45deg);
+  -ms-transform:rotate(-45deg);
+  -o-transform:rotate(-45deg);
+  transform:rotate(-45deg)
+}
+
+#cssmenu .submenu-button {
+  position:absolute;
+  z-index:99;
+  right:0;
+  top:0;
+  display:block;
+  height:46px;
+  width:100%;
+  cursor:pointer
+}
+
 
 
 }
